# NeoAuth

./: README.md  docker-compose.yml  main.py  neoauth
api/: .gitignore  Dockerfile  api.py  auth.py  config.py  curd.py  database.py  images.py  objects.py  pyproject.toml  run.sh  schemas.py
api/api/: api.py  config.py  curd.py  database.py  images.py  models.py
app/: package.json  tsconfig.json  webpack.config.js
app/nginx/: nginx.conf
app/public/: index.html
app/src/: App.tsx  Landing.tsx  api.tsx  app.tsx  index.css  index.tsx
app/src/Auth/: Auth.tsx  api.tsx
app/src/Auth/components/: Login.tsx  Register.tsx
app/src/auth/: Auth.css  Auth.tsx  api.tsx  types.ts
app/src/auth/components/: AuthProvider.tsx  RequireAuth.tsx
app/src/auth/login/: Login.tsx
app/src/auth/login/components/: ChallengeSlide.tsx  EmailSlide.tsx  ImageButton.tsx
app/src/auth/register/: Register.tsx
app/src/auth/register/components/: DetailsSlide.tsx  EmailSlide.tsx  InfoSlide.tsx  NeoPassSlide.tsx  ReviewSlide.tsx  SuccessSlide.tsx
app/src/components/: Carousel.tsx  NavBar.tsx
app/src/components/css/: Carousel.css
app/src/dash/: Dash.tsx
